crates/webfang_core/tests/behavioral/snapshots/behavioral__all_urls_blocked_by_robots_stderr.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
expression: redacted
---
Error: 1 URL(s) bloqueadas por robots.txt. Usa --ignore-robots para omitir esta verificación.
