crates/webfang_core/tests/behavioral/snapshots/behavioral__burst_non_numeric_fails_closed_stderr.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
expression: redacted
---
Error: --rate-limit-burst «banana» no es un número (debe estar entre 1 y 4294967295)