crates/webfang_core/tests/behavioral/snapshots/behavioral__burst_out_of_range_fails_closed_stderr.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
expression: redacted
---
Error: --rate-limit-burst «4294967296» está fuera del rango admitido (debe estar entre 1 y 4294967295)