crates/webfang_core/tests/behavioral/snapshots/behavioral__cold_pull_stderr.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
expression: redacted
---
Descargando modelo AI (~390 MB, primera vez); puede tardar varios minutos.
