crates/webfang_core/tests/behavioral/snapshots/behavioral__explicit_sitemap_404_stderr.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
expression: redacted
---
  <TIMESTAMP> ERROR <MODULE>: Sitemap URL returned non-2xx status, error: http request failed: 404: server returned 404 Not Found, url: http://127.0.0.1:<PORT>/sitemap.xml, stage: sitemap.fetch, trace_id: "<TRACE_ID>"
    at <FILE>.rs:<LINE>

  <TIMESTAMP> ERROR <MODULE>: Failed to parse sitemap, error: http request failed: 404: server returned 404 Not Found, url: http://127.0.0.1:<PORT>/sitemap.xml, stage: sitemap.discovery
    at <FILE>.rs:<LINE>

Error: URL discovery failed: http error 404 al acceder a server returned 404 Not Found
